# projects

./: .gitignore  README.md  requirements.txt
Documents/NVIDIA Nsight Compute/2025.2.0/Sections/: C2CLink.section  CPIStall.py  FPInstructions.py  HighPipeUtilization.py  InstructionStatistics.section  LaunchStatistics.py  LaunchStatistics.section  MemoryApertureUsage.py  MemoryCacheAccessPattern.py  (+25 more)
HDL/: CMakeLists.txt  README.md  useGit
HDL/include/: bullet.h  common.h  enemy.h  graphics.h  input.h  main.h  player.h
HDL/src/: bullet.cpp  enemy.cpp  graphics.cpp  input.cpp  main.cpp  player.cpp
Python_Learn/: 2.py  3.py  4.3.py  4.cpp  5.cpp  5.py  8.3.py  csp_learn.py  slinkedlist.py  snode.py  test.py  相反数.py  统计整数数量.py  逆转.py
Python_Learn/old/: learn.py  name_function.py  names.py  test_name_function.py
Pytorch/: fix_and_check_venvs.py
Pytorch/RevIN-master/: .gitignore  README.md
Pytorch/Texture_comprission/BRDFDatabase/: README.md
experiment/: CMakeLists.txt  README.md  chinese_postman.txt  my_app  polynomials.txt  成语词库t.txt
experiment/include/: array.h  chinese_postman.h  expr.h  game.h  idiom_dict.h  link.h  people.h  people_utils.h  poly.h  queue.h  stack.h
experiment/main/: main_1.cpp  main_2.cpp  main_3.cpp
experiment/src/: array.cpp  chinese_postman.cpp  expr.cpp  game.cpp  idiom_dict.cpp  link.cpp  main.cpp  poly.cpp  queue.cpp  stack.cpp
mnist_classifier/: .gitignore  CMakeLists.txt  README.md  draw_metrics.py  fix_venv_paths.py
mnist_classifier/include/: activation.hpp  cnn_model.hpp  decision_tree.hpp  knn_classifier.hpp  layer.hpp  loss.hpp  metrics.hpp  mlp.hpp  mnist_reader.hpp  optimizer.hpp  svm.h  svm_classifier.hpp  tensor.hpp
mnist_classifier/libsvm-master/: svm-predict  svm-scale  svm-train
mnist_classifier/main/: main_BPnn.cpp  main_SVM.cpp  main_cnn_svm.cpp  main_decision_tree.cpp  main_knn.cpp
mnist_classifier/src/: activation.cpp  cnn_model.cpp  decision_tree.cpp  knn_classifier.cpp  layer.cpp  loss.cpp  metrics.cpp  mlp.cpp  mnist_reader.cpp  optimizer.cpp  svm.cpp  svm_classifier.cpp  tensor.cpp
mnist_classifier/test/: main.cpp
simulation/: README.md  config.py  gui.py  main.py  plot_utils.py  simulation.py  utils.py
(+32 files in other folders)
